# bluespace_ai_xsens_ros_mti_driver

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
include/ros2_xsens_mti_driver/: ntrip_util.h  xdacallback.h  xdainterface.h
include/ros2_xsens_mti_driver/messagepublishers/: nmeapublisher.h  packetcallback.h  statuspublisher.h
launch/: display.launch.py  xsens_mti_node.launch.py
lib/xspublic/: CMakeLists.txt
lib/xspublic/xscommon/: threading.cpp
param/: xsens_mti_node.yaml
src/: main.cpp  ntrip_util.cpp  xdacallback.cpp  xdainterface.cpp
